tests/paczka1/small_fuzzy/20028387.err
Error in line 2: wO0Rmuh S395 56,1
Error in line 1: uF2uguzBq S395 45,5
Error in line 6: uF2uguzBq A182 76,6
Error in line 12: uF2uguzBq S66 47,7
